--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/index.js",
+      "src": "backend/server.js",
       "use": "@vercel/node"
     },
     {
@@ -16,10 +16,10 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/index.js"
+      "dest": "backend/server.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/../frontend/(.*)",
       "dest": "frontend/dist/$1"
     }
   ]
