--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-     "vercel-build": "npm run build",
+    "vercel-build": "npm run build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@imgly/background-removal": "^1.6.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.10.0",
     "cally": "^0.8.0",
     "daisyui": "^5.0.46",
