--- a/backend/package.json
+++ b/backend/package.json
@@ -9,14 +9,15 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3"
   },
   "engines": {
     "node": ">=18.0.0"
   },
-    "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js",
-        "lint": "eslint ."
-    }
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "lint": "eslint ."
+  }
 }
